Add debug store navigation link in showcase template
- Introduced a new button in the showcase template for accessing the debug store, enhancing user navigation for managing DataFrames in the session.

--- a/Analayzee/templates/showcase.html
+++ b/Analayzee/templates/showcase.html
@@ -297,6 +297,7 @@
                     <a href="{% url 'accounts:login' %}" class="btn btn-secondary">Login</a>
                     <a href="{% url 'accounts:signup' %}" class="btn btn-primary">Sign Up</a>
                 {% endif %}
+                <a href="{% url 'accounts:debug_store_nav' %}" class="btn btn-outline btn-warning">🧪 Debug Store</a>
             </div>
         </div>
     </div>
